# palatini-pt-spurion

./: .jupytext.toml  .pre-commit-config.yaml  CITATION.bib  CITATION.cff  LICENSE  Makefile  README.md  Snakefile  environment.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: paper_grids.yaml
configs/coeffs/: closed.json  mixing_matrix_FRW.json
docs/: ADOPTION_PACK.md  FAQ.md  PRESS_KIT.md  REPRODUCIBILITY.md  REVIEWER_NOTES.md
figs/data/: c1_alignment.csv  c1_alignment.csv.md5  c1_components.csv  c1_components.csv.md5  c2_residuals.csv  c2_residuals.csv.md5  cT_grid.npz  cT_grid.npz.md5  deg_eigvals.csv  deg_eigvals.csv.md5  dispersion.csv  dispersion.csv.md5  flux_ratio.csv  flux_ratio.csv.md5  mixing_matrix.csv  mixing_matrix.csv.md5  mixing_matrix_meta.json  mixing_matrix_meta.json.md5  nlo_offsets.csv  nlo_offsets.csv.md5  run_manifest.json  smoke.json  waveform_overlay.csv  waveform_overlay.csv.md5
figs/pdf/: fig1_c1_pure_trace.pdf.md5  fig2_c1_alignment.pdf.md5  fig3_c2_coeff_compare.pdf.md5  fig4_c3_cT_heatmap.pdf.md5  fig5_c3_dispersion.pdf.md5  fig6_c3_degeneracy.pdf.md5  fig7_gw_waveform_overlay.pdf.md5  fig8_nlo_offsets.pdf.md5  fig9_flux_ratio.pdf.md5
notebooks/: 00_sanity.ipynb  00_sanity.py  10_c2_symbolic_demo.ipynb  10_c2_symbolic_demo.py  20_flux_ratio.ipynb  20_flux_ratio.py  30_nlo_offsets.ipynb  30_nlo_offsets.py
palatini_pt/: __init__.py  cli.py
palatini_pt/algebra/: __init__.py  basis.py  bianchi.py  ibp.py  indices.py
palatini_pt/equivalence/: __init__.py  closed_metric_chain.py  coeff_extractor.py  cspp_chain.py  dbi_chain.py  flux_ratio.py  order2_checker.py
scripts/: fig_c1_alignment.py  fig_c1_pure_trace.py  fig_c2_coeff_compare.py  fig_c3_cT_heatmap.py  fig_c3_degeneracy.py  fig_c3_dispersion.py  fig_flux_ratio.py  fig_gw_waveform_overlay.py  fig_nlo_offsets.py  make_all_figs.py  mixing_matrix_extract.py
tests/: conftest.py  test_algebra_basis.py  test_c1_torsion.py  test_c2_equivalence.py  test_c3_tensor.py  test_cli.py  test_flux_ratio.py  test_mixing_matrix_extract.py  test_nlo.py  test_paper_mode_apis.py  test_scripts_figs.py  test_torsion_decomp.py
(+20 files in other folders)
